--- a/app/assets/stylesheets/cities.scss
+++ b/app/assets/stylesheets/cities.scss
@@ -7,6 +7,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 400px;
+  width: 400px;
+  background-color: #f2f2f2;
 }
 
 .city-image{
