--- a/app/assets/stylesheets/cities.scss
+++ b/app/assets/stylesheets/cities.scss
@@ -12,6 +12,12 @@
   background-color: #f2f2f2;
 }
 
+.city-name{
+  font-size: 25px;
+  font-family: 'Josefin Sans', sans-serif;
+
+}
+
 .city-image{
   height: 300px;
   width: 400px;
