--- a/app/assets/stylesheets/cities.scss
+++ b/app/assets/stylesheets/cities.scss
@@ -1,14 +1,24 @@
 // Place all the styles related to the cities controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.city-index{
+  display: flex;
+  flex-direction: row;
+  // border: 1px solid red;
+  flex-wrap:wrap;
+  justify-content: space-around;
+  align-items: center;
+  margin-right: 35px;
+}
 
 .city-item{
+  margin-top: 40px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 400px;
-  width: 400px;
+  height: 350px;
+  width: 350px;
   background-color: #f2f2f2;
 }
 
@@ -19,8 +29,8 @@
 }
 
 .city-image{
-  height: 300px;
-  width: 400px;
+  height: 270px;
+  width: 350px;
   border: 6px solid lightblue;
   border-bottom: none;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
