--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+      <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyBg43Lx4xHFPW3gvmKBy8cE7v4f0UxePns" %>
   </head>
 
   <body>
