--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -1,10 +1,10 @@
 #map-container{
-  height: 400px;
+  top: 120px;
+  height: 350px;
   width: 780px;
   display: block;
   margin-right: auto;
   margin-left:auto;
-
 border: 20px solid white ;
 outline: 10px solid #d9d9d9;
 }
