--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
     <%= javascript_include_tag 'application' %>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
       <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyBg43Lx4xHFPW3gvmKBy8cE7v4f0UxePns" %>
+      <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
+
+
   </head>
 
   <body>
