--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -16,13 +16,17 @@
   font-family: 'Josefin Sans', sans-serif;
   font-size: 30px;
   color: white;
-  margin-right: 30px;
+  margin-right: 35px;
 }
 .top-10{
-  margin-right: 20px;
+  margin-right: 30px;
+}
+i{
+  margin-left: 40px;
 }
 .overflow{
-  margin-right: 20px;
+
+  margin-right: 30px;
 
 }
 .nav-right{
