--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -6,7 +6,7 @@
   display:flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   position:fixed;
   width: 100%;
   z-index: 1;
@@ -16,18 +16,31 @@
   font-family: 'Josefin Sans', sans-serif;
   font-size: 30px;
   color: white;
-  margin-right: 35px;
+  margin-right: 55px;
+  margin-left: 40px;
 }
 .top-10{
   margin-right: 30px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-i{
-  margin-left: 40px;
-}
+
 .overflow{
 
   margin-right: 30px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
+}
+.favorites{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .nav-right{
   font-family: 'Josefin Sans', sans-serif;
@@ -42,5 +55,6 @@ i{
 
 .search{
   width: 250px;
+  margin-right: 30px;
   height: 30px;
 }
