--- a/app/assets/stylesheets/cities.scss
+++ b/app/assets/stylesheets/cities.scss
@@ -9,11 +9,11 @@
   justify-content: space-around;
   align-items: center;
   margin-right: 35px;
-  margin-top: 120px;
+  margin-top: 30px;
 }
 
 .city-item{
-  margin-top: 40px;
+  margin-top: 7%;
   display: flex;
   flex-direction: column;
   justify-content: center;
