--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -1,10 +1,36 @@
 #map-container{
   top: 120px;
   height: 320px;
-  width: 800px;
+  width: 500px;
   display: block;
   margin-right: auto;
   margin-left:auto;
 border: 20px solid white ;
 outline: 10px solid #d9d9d9;
+margin-right: 10%;
+
+}
+.header{
+  font-weight: bold;
+  font-size: 70px;
+  font-style: normal;
+}
+.splash{
+  display:flex;
+  flex-direction: row;
+  // justify-content: space-between;
+  align-items: center;
+   margin-top:-50px;
+  font-size: 20px;
+  font-family: 'Josefin Sans', sans-serif;
+  line-height: 1.2;
+
+}
+
+.splash-left{
+  width: 30%;
+  margin-left: 10%;
+  margin-top:220px;
+  margin-right: 30px;
+  // font-style: italic;
 }
