--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -20,6 +20,7 @@
   margin-left: 40px;
 }
 .top-10{
+  color: #f2f2f2;
   margin-right: 30px;
   display:flex;
   flex-direction: column;
@@ -28,6 +29,7 @@
 }
 
 .overflow{
+  color: #f2f2f2;
 
   margin-right: 30px;
   display:flex;
@@ -37,6 +39,8 @@
 
 }
 .favorites{
+  color: #f2f2f2;
+
   display:flex;
   flex-direction: column;
   justify-content: center;
