--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -1,19 +1,22 @@
 #map-container{
   top: 120px;
-  height: 320px;
-  width: 500px;
+  // height: 320px;
+  // width: 500px;
+  height: 35vmin;
+  width: 60vmin;
   display: block;
   margin-right: auto;
   margin-left:auto;
 border: 20px solid white ;
 outline: 10px solid #d9d9d9;
-margin-right: 10%;
+margin-right: 13%;
 
 }
 .header{
   font-weight: bold;
-  font-size: 70px;
+  font-size: 5vw;
   font-style: normal;
+  line-height: 0.9;
 }
 .splash{
   display:flex;
@@ -21,16 +24,19 @@ margin-right: 10%;
   // justify-content: space-between;
   align-items: center;
    margin-top:-50px;
-  font-size: 20px;
+  font-size: 1.5vw;
   font-family: 'Josefin Sans', sans-serif;
-  line-height: 1.2;
+  line-height: 1.3;
 
 }
 
 .splash-left{
   width: 30%;
-  margin-left: 10%;
+  // height: 35vmin;
+  // width: 60vmin;
+  margin-left: 13%;
   margin-top:220px;
   margin-right: 30px;
+  // text-align: center;
   // font-style: italic;
 }
