--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -14,7 +14,7 @@
 
 .logo{
   font-family: 'Josefin Sans', sans-serif;
-  font-size: 30px;
+  font-size: 3vw;
   color: white;
   margin-right: 55px;
   margin-left: 40px;
@@ -26,6 +26,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .overflow{
@@ -40,6 +41,7 @@
 }
 .favorites{
   color: #f2f2f2;
+  margin-right: 30px;
 
   display:flex;
   flex-direction: column;
@@ -58,7 +60,8 @@
 }
 
 .search{
-  width: 250px;
+
+  width: 35vmin;
   margin-right: 30px;
   height: 30px;
   font-size: 20px;
