--- a/app/assets/stylesheets/cities.scss
+++ b/app/assets/stylesheets/cities.scss
@@ -7,9 +7,11 @@
   // border: 1px solid red;
   flex-wrap:wrap;
   // border: 1px solid black;
+
   justify-content: space-around;
   align-items: center;
-  margin-right: 35px;
+  // margin-left: 15vmin;
+  margin-right: 3.5vmin;
   margin-top: 30px;
 }
 
@@ -23,6 +25,7 @@
   // width: 350px;
   height: 42vmin;
   width: 42vmin;
+  margin-right: 10px;
   // width: 30%;
   background-color: #f2f2f2;
 }
