--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -12,6 +12,22 @@ outline: 10px solid #d9d9d9;
 margin-right: 13%;
 
 }
+
+#city-map-container{
+  top: 120px;
+  // height: 320px;
+  // width: 500px;
+  height: 35vmin;
+  width: 90vmin;
+  display: block;
+  margin-right: auto;
+  margin-left:auto;
+border: 20px solid white ;
+outline: 10px solid #d9d9d9;
+margin-right: 13%;
+
+}
+
 .header{
   font-weight: bold;
   font-size: 5vw;
