--- a/app/assets/stylesheets/city.scss
+++ b/app/assets/stylesheets/city.scss
@@ -3,10 +3,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 600px;
-  width: 100%;
-  // margin-top: 100px;
-  margin-top: -50px;
+  // height: 600px;
+  // width: 100%;
+  margin-top: 100px;
+  // margin-top: -50px;
 
 }
 
@@ -18,4 +18,8 @@
 .city-map{
   // border: 1px solid black;
   margin-top: -100px;
+}
+
+.business-index{
+  margin-top: 200px;
 }
