--- a/app/assets/stylesheets/businesses.scss
+++ b/app/assets/stylesheets/businesses.scss
@@ -1,3 +1,39 @@
 // Place all the styles related to the businesses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.business-index-item{
+  margin: 40px;
+  border-bottom:1px solid lightgray;
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+
+}
+
+.business-index{
+  // border:1px solid black;
+  width: 700px;
+}
+
+.business-item-image{
+  height: 110px;
+  margin-bottom: 20px;
+  margin-right: 30px;
+}
+
+.business-index-item-name{
+  font-size: 24px;
+}
+
+.business-index-item-type{
+  color:gray;
+}
+
+.business-index-item-description{
+  margin-bottom: 30px;
+}
+
+.business-show{
+  margin-top:300px;
+}
