--- a/app/assets/stylesheets/city.scss
+++ b/app/assets/stylesheets/city.scss
@@ -13,6 +13,8 @@
 .city-show-name{
   // border: 1px solid black;
   font-size: 40px;
+  margin-top: 190px;
+
 }
 
 .city-map{
@@ -21,5 +23,5 @@
 }
 
 .business-index{
-  margin-top: 200px;
+  // margin-top: 20px;
 }
