Add business image

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,6 +20,16 @@ body{
 
 }
 
+.back{
+  text-decoration: underline;
+
+}
+
+.back:hover{
+  cursor: pointer;
+
+}
+
 a{
   text-decoration: none;
   color:black;
