--- a/app/assets/stylesheets/businesses.scss
+++ b/app/assets/stylesheets/businesses.scss
@@ -2,22 +2,32 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
+
+
 .business-index-item{
   margin: 40px;
+  margin-left: 10px;
+  margin-right: 5px;
   border-bottom:1px solid lightgray;
   display:flex;
   flex-direction: row;
   align-items: center;
+  // border: 1px solid black;
+  width: 500px;
 
 }
 
 .business-index{
   // border:1px solid black;
   width: 700px;
+  display:flex;
+  flex-direction: row;
 }
 
 .business-item-image{
-  height: 110px;
+  height: 120px;
+  width: 120px;
   margin-bottom: 20px;
   margin-right: 30px;
 }
