--- a/app/assets/stylesheets/city.scss
+++ b/app/assets/stylesheets/city.scss
@@ -5,10 +5,11 @@
   align-items: center;
   // height: 600px;
   // width: 100%;
-  margin-top: 100px;
+  // margin-top: 200px;
   // margin-top: -50px;
 
 }
+
 
 .city-show-name{
   // border: 1px solid black;
@@ -19,9 +20,13 @@
 
 .city-map{
   // border: 1px solid black;
-  margin-top: -100px;
+  // margin-top: -100px;
 }
 
 .business-index{
-  // margin-top: 20px;
+  // border: 1px solid black;
+  background-color: #f2f2f2;
+  width: 1150px;
+  height: 1150px;
+  margin-top: 20px;
 }
