--- a/app/assets/stylesheets/cities.scss
+++ b/app/assets/stylesheets/cities.scss
@@ -13,6 +13,12 @@
   // margin-left: 15vmin;
   margin-right: 3.5vmin;
   margin-top: 20px;
+  width: 1200px;
+}
+.city-index-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
