--- a/app/assets/stylesheets/city.scss
+++ b/app/assets/stylesheets/city.scss
@@ -15,7 +15,6 @@
   // border: 1px solid black;
   font-size: 40px;
   margin-top: 190px;
-
 }
 
 .city-map{
@@ -25,8 +24,8 @@
 
 .business-index{
   // border: 1px solid black;
-  background-color: #f2f2f2;
+  // background-color: #f2f2f2;
   width: 1150px;
   height: 1150px;
-  margin-top: 20px;
+  // margin-top: 20px;
 }
