Add hover over business

--- a/app/assets/stylesheets/businesses.scss
+++ b/app/assets/stylesheets/businesses.scss
@@ -36,6 +36,10 @@
   font-size: 24px;
 }
 
+.business-index-item-name :hover{
+  color: lightgreen;
+}
+
 .business-index-item-type{
   color:gray;
   margin-bottom: 4px;
