--- a/app/assets/stylesheets/city.scss
+++ b/app/assets/stylesheets/city.scss
@@ -15,6 +15,19 @@
   // border: 1px solid black;
   font-size: 40px;
   margin-top: 190px;
+  margin-bottom: -20px;
+}
+
+.city-name-right{
+  width: 150px;
+  height: 200px;
+  border: 1px solid black;
+}
+.city-name-left{
+  width: 150px;
+  height: 200px;
+
+  border-bottom: 1px solid black;
 }
 
 .city-map{
