--- a/app/assets/stylesheets/businesses.scss
+++ b/app/assets/stylesheets/businesses.scss
@@ -23,10 +23,14 @@
   // border: 1px solid black;
   margin-left: -5px;
 }
+.business-index-left{
+  // border: 1px solid black;
+  margin-left: -20px;
+}
 
 .business-index{
   // border:1px solid black;
-  width: 700px;
+  width: 670px;
   display:flex;
   flex-direction: row;
   justify-content: center;
