--- a/app/assets/stylesheets/businesses.scss
+++ b/app/assets/stylesheets/businesses.scss
@@ -1,9 +1,50 @@
 // Place all the styles related to the businesses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.slick-arrow .slick-next{
+    font-size: 20px;
+    line-height: 1;
+    opacity: .75;
+    color: red;
+}
 
 
 
+button{
+  color:red;
+}
+
+
+
+.slick-list{
+  width: 600px;
+  height: 200px;
+  margin: 20px;
+  // background-color: gray;
+  align-items: center;
+
+}
+//
+// .slick-prev{
+//   width: 40px;
+// }
+
+.slider-1, .slider-2, .slider-3, .slider-4,.slider-5,.slider-6{
+    width: 200px;
+    height: 200px;
+
+    border: 7px solid white;
+}
+
+
+
+.slick-track{
+  width:300px;
+}
+
+.slick-arrow .slick-next{
+  background-color: red;
+}
 
 .business-index-item{
   margin-bottom: 40px;
@@ -16,6 +57,26 @@
   align-items: center;
   // border: 1px solid black;
   width: 500px;
+
+}
+
+h3{
+  color:lightblue;
+}
+
+.business-text{
+  // border: 1px solid black;
+  width: 55%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.business-description{
+
+
+  width: 200px;
 
 }
 
