--- a/app/assets/stylesheets/businesses.scss
+++ b/app/assets/stylesheets/businesses.scss
@@ -17,12 +17,21 @@ button{
 
 
 .slick-list{
-  width: 600px;
+  width: 620px;
   height: 200px;
   margin: 20px;
-  // background-color: gray;
+  background-color: #f2f2f2;
   align-items: center;
 
+}
+
+.slider-container{
+  background-color: #f2f2f2;
+  width: 690px;
+  height: 260px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
 }
 //
 // .slick-prev{
@@ -32,8 +41,6 @@ button{
 .slider-1, .slider-2, .slider-3, .slider-4,.slider-5,.slider-6{
     width: 200px;
     height: 200px;
-
-    border: 7px solid white;
 }
 
 
