--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,15 @@
       <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
 
+<% if signed_in? %>
+<script>
+window.currentUser = {
+"id": <%= current_user.id %>, "username": "<%= current_user.username %>"
+}
+</script>
+<% end %>
+
+
   </head>
 
   <body>
