--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -48,6 +48,15 @@
   justify-content: center;
   align-items: center;
 }
+.login{
+  color: #f2f2f2;
+  margin-right: 30px;
+
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .nav-right{
   font-family: 'Josefin Sans', sans-serif;
   display:flex;
