--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -28,6 +28,22 @@ margin-right: 13%;
 
 }
 
+
+#business-map-container{
+  // top: 120px;
+  // height: 320px;
+  // width: 500px;
+  height: 300px;
+  width: 300px;
+  display: block;
+//   margin-right: auto;
+//   margin-left:auto;
+border: 20px solid white ;
+outline: 10px solid #d9d9d9;
+// margin-right: 13%;
+
+}
+
 .header{
   font-weight: bold;
   font-size: 5vw;
