--- a/app/assets/stylesheets/businesses.scss
+++ b/app/assets/stylesheets/businesses.scss
@@ -8,6 +8,18 @@
     color: red;
 }
 
+.liked{
+  color: red;
+}
+
+.liked:hover{
+  cursor: pointer;
+}
+
+.unliked:hover{
+  cursor:pointer;
+}
+
 
 .business-show-top{
   display:flex;
