--- a/app/assets/stylesheets/likes.scss
+++ b/app/assets/stylesheets/likes.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the likes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.liked{
+  color: red;
+}
+
+.liked:hover{
+  cursor: pointer;
+}
+
+.unliked:hover{
+  cursor:pointer;
+}
