--- a/app/assets/stylesheets/notification.scss
+++ b/app/assets/stylesheets/notification.scss
@@ -5,4 +5,7 @@
     position:absolute;
     right:0px;
     text-align: center;
+    color:white;
+    border-radius: 1px;
+    // border: 3px solid black;
 }
