Add link to search

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -95,10 +95,13 @@
 
 .search-item{
   background-color: white;
-  padding: 20px;
-  width: 223px;
+  // padding: 20px;
+  width: 34.3vmin;
+  padding-top: 15px;
+  padding-left:10px;
+  padding-bottom: 15px;
   border: 1px solid gray;
-
+  text-align: justify;
 }
 
 .search-list{
