--- a/app/assets/stylesheets/topten.scss
+++ b/app/assets/stylesheets/topten.scss
@@ -4,7 +4,7 @@
   display:flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;  
+  align-items: center;
 }
 
 .top-ten-number{
@@ -17,7 +17,7 @@
 
 .topten-index-item{
   margin-bottom: 40px;
-  margin-top: 40px;
+  // margin-top: 10px;
   margin-left: 5px;
   margin-right: 5px;
   border-bottom:1px solid lightgray;
