--- a/app/assets/stylesheets/favorites.scss
+++ b/app/assets/stylesheets/favorites.scss
@@ -6,3 +6,10 @@
   justify-content: center;
   align-items: center;
 }
+
+.favorites-placeholder{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
