--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,9 @@
 body{
   margin: 0 auto;
   font-family: 'Josefin Sans', sans-serif;
+  /*font-family: 'Brandon','Helvetica',sans-serif,"Helvetica Neue",'Helvetica','Roboto','Arial',sans-serif;*/
 
+  /*font-family: Brandon,Helvetica,sans-serif,"Helvetica Neue",Helvetica,Roboto,Arial,sans-serif*/
 }
 
 .back{
