--- a/app/assets/stylesheets/businesses.scss
+++ b/app/assets/stylesheets/businesses.scss
@@ -88,7 +88,6 @@
   align-items: center;
   // border: 1px solid black;
   width: 500px;
-
 }
 
 h3{
@@ -145,6 +144,8 @@ h3{
   width: 120px;
   margin-bottom: 20px;
   margin-right: 30px;
+  border-radius: 5%;
+
 }
 
 .business-index-item-name{
