--- a/app/assets/stylesheets/cities.scss
+++ b/app/assets/stylesheets/cities.scss
@@ -6,36 +6,41 @@
   flex-direction: row;
   // border: 1px solid red;
   flex-wrap:wrap;
-  // border: 1px solid black;
 
   justify-content: space-around;
   align-items: center;
   // margin-left: 15vmin;
   margin-right: 3.5vmin;
   margin-top: 20px;
-  width: 1200px;
+  // width: 1200px;
+
 }
 .city-index-container{
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  // justify-content: center;
+  // align-items: flex-end;
+  width: 1150px;
+  margin: 0 auto;
+  margin-top: 40px;
+
 }
 
 
 
 .city-item{
-  margin-top: 10vmin;
+  // margin-top: 10vmin;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  // height: 350px;
-  // width: 350px;
-  height: 42vmin;
-  width: 42vmin;
-  margin-right: 10px;
-  // width: 30%;
-  background-color: #f2f2f2;
+
+  // height: 42vmin;
+  // width: 42vmin;
+  margin: 20px;
+
+  // background-color: #f2f2f2;
 }
 
 .city-name{
@@ -45,14 +50,15 @@
 }
 
 .city-image{
-  // height: 270px;
-  // width: 350px;
-  height: 33vmin;
-  width: 42vmin;
-  border: 6px solid lightblue;
+  height: 250px;
+  width: 310px;
+  border-radius: 10px;
+  // height: 33vmin;
+  // width: 42vmin;
+  // border: 6px solid lightblue;
   border-bottom: none;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
 
 }
 
