--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -1,9 +1,9 @@
 #map-container{
   top: 120px;
-  // height: 320px;
-  // width: 500px;
-  height: 35vmin;
-  width: 60vmin;
+  height: 280px;
+  width: 500px;
+  // height: 35vmin;
+  // width: 60vmin;
   display: block;
   margin-right: auto;
   margin-left:auto;
@@ -15,10 +15,10 @@ margin-right: 13%;
 
 #city-map-container{
   top: 120px;
-  // height: 320px;
-  // width: 500px;
-  height: 35vmin;
-  width: 90vmin;
+  height: 320px;
+  width: 800px;
+  // height: 35vmin;
+  // width: 90vmin;
   display: block;
   margin-right: auto;
   margin-left:auto;
@@ -38,7 +38,6 @@ margin-right: 13%;
   display: block;
 //   margin-right: auto;
 //   margin-left:auto;
-border: 20px solid white ;
 outline: 10px solid #d9d9d9;
 // margin-right: 13%;
 
@@ -46,29 +45,33 @@ outline: 10px solid #d9d9d9;
 
 .header{
   font-weight: bold;
-  font-size: 5vw;
+  font-size: 40px;
   font-style: normal;
   line-height: 0.9;
 }
 .splash{
   display:flex;
   flex-direction: row;
+  width: 1300px;
+  height: 550px;
+  margin: 0 auto;
   // justify-content: space-between;
   align-items: center;
-   margin-top:-50px;
-  font-size: 1.5vw;
+   margin-top:-70px;
+  font-size: 25px;
   font-family: 'Josefin Sans', sans-serif;
   line-height: 1.3;
 
 }
 
 .splash-left{
-  width: 30%;
-  // height: 35vmin;
-  // width: 60vmin;
+  // border: 1px
+  font-size: 20px;
+  width: 320px;
+  height: 200px;
   margin-left: 13%;
-  margin-top:240px;
-  margin-right: 50px;
+  margin-top:170px;
+  // margin-right: 30px;
   // text-align: center;
   // font-style: italic;
 }
