--- a/app/assets/stylesheets/city.scss
+++ b/app/assets/stylesheets/city.scss
@@ -3,11 +3,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  // height: 600px;
-  // width: 100%;
-  // margin-top: 200px;
-  // margin-top: -50px;
-  // border: 1px solid black;
 
 }
 
@@ -20,10 +15,9 @@
 }
 
 .city-show-name{
-  // border: 1px solid black;
   font-size: 40px;
-  margin-top: 190px;
-  margin-bottom: -20px;
+  margin-top: 120px;
+  // margin-bottom: -20px;
 }
 
 .city-name-right{
@@ -38,15 +32,11 @@
 }
 
 .city-map{
-  // border: 1px solid black;
-  // margin-top: -100px;
   margin-top: 20px;
 }
 
 .business-index{
-  // border: 1px solid black;
-  // background-color: #f2f2f2;
   width: 1150px;
   height: 1150px;
-  // margin-top: 20px;
+
 }
