--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -14,8 +14,8 @@ margin-right: 13%;
 }
 
 #city-map-container{
-  top: 120px;
-  height: 320px;
+  top: 20px;
+  height: 255px;
   width: 800px;
   // height: 35vmin;
   // width: 90vmin;
@@ -25,6 +25,7 @@ margin-right: 13%;
 border: 20px solid white ;
 outline: 10px solid #d9d9d9;
 margin-right: 13%;
+  margin-bottom: 30px;
 
 }
 
@@ -57,7 +58,7 @@ outline: 10px solid #d9d9d9;
   margin: 0 auto;
   // justify-content: space-between;
   align-items: center;
-   margin-top:-70px;
+   margin-top:-110px;
   font-size: 25px;
   font-family: 'Josefin Sans', sans-serif;
   line-height: 1.3;
