--- a/app/assets/stylesheets/cities.scss
+++ b/app/assets/stylesheets/cities.scss
@@ -48,7 +48,7 @@
 .city-image{
   height: 250px;
   width: 310px;
-  border-radius: 10px;
+  // border-radius: 10px;
   border-bottom: none;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
