--- a/app/assets/stylesheets/businesses.scss
+++ b/app/assets/stylesheets/businesses.scss
@@ -140,11 +140,10 @@ h3{
 }
 
 .business-item-image{
-  // height: 120px;
+  height: 120px;
   width: 120px;
   margin-bottom: 20px;
   margin-right: 30px;
-  border-radius: 5%;
 
 }
 
