--- a/app/assets/stylesheets/businesses.scss
+++ b/app/assets/stylesheets/businesses.scss
@@ -140,10 +140,11 @@ h3{
 }
 
 .business-item-image{
-  height: 120px;
-  width: 120px;
+  // height: 120px;
+  width: 115px;
   margin-bottom: 20px;
   margin-right: 30px;
+  border: 3px solid lightgray;
 
 }
 
