--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -58,11 +58,17 @@ outline: 10px solid #d9d9d9;
   margin: 0 auto;
   // justify-content: space-between;
   align-items: center;
-   margin-top:-110px;
+   margin-top:-90px;
   font-size: 25px;
   font-family: 'Josefin Sans', sans-serif;
   line-height: 1.3;
 
+}
+
+@media(max-width: 1300px){
+  .splash{
+    width: 1200px;
+  }
 }
 
 .splash-left{
