--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -58,7 +58,7 @@ outline: 10px solid #d9d9d9;
   margin: 0 auto;
   // justify-content: space-between;
   align-items: center;
-   margin-top:-160px;
+   margin-top:-185px;
   font-size: 25px;
   font-family: 'Josefin Sans', sans-serif;
   line-height: 1.3;
@@ -78,6 +78,7 @@ outline: 10px solid #d9d9d9;
   height: 200px;
   margin-left: 13%;
   margin-top:170px;
+  text-align:center;
   // margin-right: 30px;
   // text-align: center;
   // font-style: italic;
