--- a/app/assets/stylesheets/notification.scss
+++ b/app/assets/stylesheets/notification.scss
@@ -1,5 +1,5 @@
 .notification{
-  background-color: lightblue;
+  background-color: #FFAD2F;;
   width: 300px;
   height:60px;
     position:absolute;
