--- a/app/assets/stylesheets/city.scss
+++ b/app/assets/stylesheets/city.scss
@@ -16,7 +16,7 @@
 
 .city-show-name{
   font-size: 40px;
-  margin-top: 120px;
+  margin-top: 60px;
   // margin-bottom: -20px;
 }
 
@@ -32,7 +32,9 @@
 }
 
 .city-map{
-  margin-top: 20px;
+  // margin-top: 5px;
+  width: 100%;
+  // border: 1px solid black;
 }
 
 .business-index{
