--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -15,15 +15,15 @@ margin-right: 13%;
 
 #city-map-container{
   top: 20px;
-  height: 255px;
-  width: 800px;
-  // height: 35vmin;
-  // width: 90vmin;
+  height: 305px;
+  // width: 800px;
+  width: 100%;
+
   display: block;
-  margin-right: auto;
-  margin-left:auto;
-border: 20px solid white ;
-outline: 10px solid #d9d9d9;
+  // margin-right: auto;
+  // margin-left:auto;
+// border: 20px solid black ;
+// outline: 10px solid #d9d9d9;
 margin-right: 13%;
   margin-bottom: 30px;
 
